--- a/landing.html
+++ b/landing.html
@@ -11,26 +11,26 @@
     <!-- space-y-4 will give margin in y axis top and bottom -->
     <!-- flex properity is applied on the parent container  and we also aply the space-x or space-y prop on the parent in order to provide the margin to the child elements-->
     <nav class="bg-purple-600 flex text-white justify-between ">
-      <span class="text-2xl flex items-center font-bold justify-center ml-4">Pranjal Phone Mania</span>
-      <ul class="px-28 py-4 flex space-x-11 justify-end">
-        <li class="cursor-pointer">Home</li>
-        <li class="cursor-pointer">About</li>
-        <li class="cursor-pointer">Servics</li>
-        <li class="cursor-pointer">Contact us</li>
+      <span class="text-2xl flex items-center font-bold justify-center ml-4 selection:text-black">Pranjal Phone Mania</span>
+      <ul class="px-28 py-4 flex space-x-11 justify-end selection:text-black">
+        <li class="cursor-pointer active:font-bold active:text-green-300">Home</li>
+        <li class="cursor-pointer active:font-bold active:text-green-300">About</li>
+        <li class="cursor-pointer active:font-bold active:text-green-300">Servics</li>
+        <li class="cursor-pointer active:font-bold active:text-green-300">Contact us</li>
       </ul>
     </nav>
 
     <main class=" bg-purple-200 flex justify-around">
         <div class="main py-40">
-            <div class="text-6xl pl-9">
+            <div class="text-6xl pl-9 ">
                 the best phone in the town 
             </div>
             <p class="py-3 mx-9 w-96">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque molestiae id placeat tenetur voluptates aspernatur velit! Voluptas, omnis ea quisquam quam enim dolor?
                 <div class="buttons mx-8 my-4">
-                    <button class="bg-purple-800 px-3 py-2 rounded-2xl text-white hover:bg-green-300  mx-2 hover:border-4 hover:border-red-200 hover:text-black">
+                    <button class="bg-purple-800 px-3 py-2 rounded-2xl text-white hover:bg-green-300  mx-4 hover:border-4 hover:border-red-200 hover:text-black">
                         Click me
                     </button>
-                    <button class="bg-purple-800 px-3 py-2 rounded-2xl text-white hover:bg-green-300  mx-2 hover:border-4 hover:border-red-200 hover:text-black">
+                    <button class="bg-purple-800 px-3 py-2 rounded-2xl text-white hover:bg-green-300  mx-4 hover:border-4 hover:border-red-200 hover:text-black">
                         Buy Now!!!!!
                     </button>
                 </div>
