--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tailwind CSS</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+    <!-- we will dont use the playCDN in the production website making  -->
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
+    <p class="text-orange-500">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ducimus incidunt possimus assumenda a quidem quas, quibusdam nemo fuga? Nisi possimus qui debitis dolorem provident corrupti iure? Unde cum sint numquam sunt eveniet!</p>
+    <p class="font-sans">pranjal jain</p>
+    <p class="font-serif font-thin">pranjal jain</p>
+    <p class="font-mono text-yellow-500 font-bold text-3xl">pranjal jain is going to learn tailwind css</p>
     
+
 </body>
 </html>
