--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
 </div>
 <p>Also we use the <b>Divide Width </b> for putting the border width in the child elements</p>
+<br>
+<p class="bg-violet-600 mx-[45x]">we use the <b>Square bracket notation </b> for custumizing and giving ourself new properties to the classes by using the tailwind classes</p>
+<!-- for the unit vw and vh will take th edynamic height and the width according to the device height and width of the device  -->
 
+<p>we use the square notation for making the custimaztion value of the properties of the class </p>
+<p>this is used if we want to use the value dynamically in the class property</p>
 </body>
 </html>
