--- a/index.html
+++ b/index.html
@@ -36,5 +36,57 @@
 
 <p>we use the square notation for making the custimaztion value of the properties of the class </p>
 <p>this is used if we want to use the value dynamically in the class property</p>
+<br><br>
+<h2 class="text-3xl sm:bg-red-500">Responsive website</h2>
+<p>Always start from the smallest size of the scrren and then use the breakpoints to move above dimension to make the design </p>
+<p>from smallest to largest go to define another properties </p>
+
+<br><br>
+<form action="">
+<select name="" id="" >
+    <option value="" >Select one option</option>
+    <option value="" selected >pranjal</option>
+    <option value="" >kapil</option>
+    <option value="" >Virat</option>
+    <option value="" >jain</option>
+</select>
+</form>
+
+space-x-3 is property that is applies to the child so we need to put that prop in the parent element 
+
+<div class="container border-4 border-red-300 p-4 flex space-x-3 flex-col-reverse">
+    <div class="boxes border-4 border-red-900 my-3 w-40 ">1</div>
+    <div class="boxes border-4 border-red-900 my-3 w-40">2</div>
+    <div class="boxes border-4 border-red-900 my-3 w-40">3</div>
+    <div class="boxes border-4 border-red-900 my-3 w-40">4</div>
+    <div class="boxes border-4 border-red-900 my-3 w-40 basis-1/2">5</div>
+</div>
+
+so we use the basis prop for setting the width of the flex items 
+<br><br>
+<h3 class="text-3xl my-4">Making the Nav bar</h3>
+<nav class="bg-slate-800 px-6 py-5 flex">
+    <ul class="flex space-x-8 mx-3">
+        <li class="cursor-pointer text-white hover:font-bold">Home</li>
+        <li class="cursor-pointer text-white hover:font-bold">About</li>
+        <li class="cursor-pointer text-white hover:font-bold">Phone</li>
+        <li class="cursor-pointer text-white hover:font-bold">Services</li>
+        <li class="cursor-pointer text-white hover:font-bold">Contact</li>
+    </ul>
+    <button class="bg-sky-500 hover:bg-sky-200 rounded-full px-3 py-2 text-black relative left-[899px]">
+        Save changes
+      </button>
+</nav>
+
+
+<br><br>
+
+
+
+
+
+
+
+
 </body>
 </html>
