--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@ so we use the basis prop for setting the width of the flex items
 <br><br>
 
 
+<!-- hovering properties  -->
+<!-- focus means that we are using the tab button  -->
+<button class="px-4 py-2 text-white bg-slate-700 hover:bg-slate-800  box-border hover:text-green-700 rounded-lg mx-20 my-20  hover:font-bold active:bg-green-300 focus:bg-blue-300 sm:hover:bg-amber-400 lg:hover:bg-orange-500" > 
+    Submit Now
+</button>
+<!-- so basically we can add the break poonts in the hover active aslo  -->
 
 
 
